mminos changes in sendmessage to add id message and added documentation endpoints inside event
