# Backend/storage/api-docs/api-docs.json
@@ -10,6 +10,201 @@
         "version": "1.0"
     },
     "paths": {
+        "/api/event/create": {
+            "post": {
+                "tags": [
+                    "Events"
+                ],
+                "summary": "Create a new event",
+                "operationId": "2348e001f2111f5ff3b0afdfa7116dfb",
+                "requestBody": {
+                    "description": "Event data to be created",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "data": {
+                                        "properties": {
+                                            "event": {
+                                                "properties": {
+                                                    "event_title": {
+                                                        "type": "string",
+                                                        "example": "Event Title"
+                                                    },
+                                                    "game_id": {
+                                                        "type": "integer",
+                                                        "example": 1
+                                                    },
+                                                    "game_name": {
+                                                        "type": "string",
+                                                        "example": "Game Name"
+                                                    },
+                                                    "game_mode": {
+                                                        "type": "string",
+                                                        "example": "Game Mode"
+                                                    },
+                                                    "game_pic": {
+                                                        "type": "string",
+                                                        "example": "http://example.com/game.jpg"
+                                                    },
+                                                    "platform": {
+                                                        "type": "string",
+                                                        "example": "Platform"
+                                                    },
+                                                    "event_owner_id": {
+                                                        "type": "integer",
+                                                        "example": 1
+                                                    },
+                                                    "date_time_begin": {
+                                                        "type": "string",
+                                                        "example": "01-01-2022T00:00:00"
+                                                    },
+                                                    "date_time_end": {
+                                                        "type": "string",
+                                                        "example": "01-01-2022T00:00:00"
+                                                    },
+                                                    "date_time_inscription_begin": {
+                                                        "type": "string",
+                                                        "example": "01-01-2022T00:00:00"
+                                                    },
+                                                    "date_time_inscription_end": {
+                                                        "type": "string",
+                                                        "example": "01-01-2022T00:00:00"
+                                                    },
+                                                    "max_participants": {
+                                                        "type": "integer",
+                                                        "example": 100
+                                                    },
+                                                    "privacy": {
+                                                        "type": "string",
+                                                        "example": "public"
+                                                    },
+                                                    "event_requirements": {
+                                                        "properties": {
+                                                            "max_rank": {
+                                                                "type": "string",
+                                                                "example": "Rank"
+                                                            },
+                                                            "min_rank": {
+                                                                "type": "string",
+                                                                "example": "Rank"
+                                                            },
+                                                            "max_level": {
+                                                                "type": "integer",
+                                                                "example": 100
+                                                            },
+                                                            "min_level": {
+                                                                "type": "integer",
+                                                                "example": 1
+                                                            },
+                                                            "max_hours_played": {
+                                                                "type": "integer",
+                                                                "example": 1000
+                                                            },
+                                                            "min_hours_played": {
+                                                                "type": "integer",
+                                                                "example": 100
+                                                            }
+                                                        },
+                                                        "type": "object"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Event created successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "properties": {
+                                                "message": {
+                                                    "type": "string",
+                                                    "example": "Event created successfully!"
+                                                },
+                                                "Links": {
+                                                    "properties": {
+                                                        "self": {
+                                                            "type": "string",
+                                                            "example": "/api/create/event"
+                                                        },
+                                                        "event": {
+                                                            "type": "string",
+                                                            "example": "/api/event/{event_id}"
+                                                        }
+                                                    },
+                                                    "type": "object"
+                                                },
+                                                "meta": {
+                                                    "properties": {
+                                                        "timestamp": {
+                                                            "type": "string",
+                                                            "example": "01-01-2022T00:00:00. UTC"
+                                                        }
+                                                    },
+                                                    "type": "object"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string",
+                                            "example": "Bad Request."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string",
+                                            "example": "Unauthorized."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ]
+            }
+        },
         "/api/user/game-stats/search/{id}": {
             "get": {
                 "tags": [
@@ -2138,6 +2333,10 @@
         }
     },
     "tags": [
+        {
+            "name": "Events",
+            "description": "Endpoints for Events"
+        },
         {
             "name": "GameUserStats",
             "description": "Endpoints for User Stats in Games"
